@@ -14,7 +14,7 @@
     <groupId>com.opower</groupId>
     <artifactId>opower-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.8-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>Opower Parent Project</name>
     <description>Parent POM for all Opower artifacts</description>
     <url>http://opower.com/</url>
@@ -49,6 +49,10 @@
         <default.encoding>UTF-8</default.encoding>
         <project.build.sourceEncoding>${default.encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${default.encoding}</project.reporting.outputEncoding>
+        <maven.failsafe.argLine>-XX:+HeapDumpOnOutOfMemoryError -Xmx1024M -XX:MaxPermSize=256M -Djava.awt.headless=true</maven.failsafe.argLine>
+        <maven.surefire.argLine>-XX:+HeapDumpOnOutOfMemoryError -Xmx1024M -XX:MaxPermSize=256M -Djava.awt.headless=true</maven.surefire.argLine>
+        <maven.surefire.fork.count>1C</maven.surefire.fork.count>
+        <maven.test.runOrder>hourly</maven.test.runOrder>
         <version.buildnumber.plugin>1.3</version.buildnumber.plugin>
         <version.maven.assembly.plugin>2.4.1</version.maven.assembly.plugin>
         <version.maven.checkstyle.plugin>2.11</version.maven.checkstyle.plugin>
@@ -80,6 +84,7 @@
         -->
         <opower.checkstyle.checks>main</opower.checkstyle.checks>
         <opower.checkstyle.test.checks>main-tests</opower.checkstyle.test.checks>
+
 
         <!-- =========================================================================== -->
         <!--  Third party library versions                                               -->
@@ -166,6 +171,52 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${version.maven.surefire.plugin}</version>  <!-- intentionally set to version.maven.surefire.plugin -->
+                    <configuration>
+                        <argLine>${jacocoSurefireArgLine} ${maven.surefire.argLine}</argLine>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <!-- Defines the order the tests will be run in. Supported values are "alphabetical",
+                           "reversealphabetical", "random", "hourly" (alphabetical on even hours, reverse alphabetical
+                           on odd hours) and "filesystem". -->
+                        <runOrder>${maven.test.runOrder}</runOrder>
+                        <systemPropertyVariables>
+                            <build.directory>${project.build.directory}</build.directory>
+                        </systemPropertyVariables>
+                        <!-- Spawn 1 VM per core to run unit tests in parallel -->
+                        <forkCount>${maven.surefire.fork.count}</forkCount>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                         </execution>
+                         <execution>
+                             <!-- This fails the build if an IntTest fails -->
+                             <id>verify</id>
+                             <phase>verify</phase>
+                             <goals>
+                                 <goal>verify</goal>
+                             </goals>
+                         </execution>
+                    </executions>
+                    <configuration>
+                        <argLine>${jacocoFailsafeArgLine} ${maven.failsafe.argLine}</argLine>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <!-- Defines the order the tests will be run in. Supported values are "alphabetical",
+                           "reversealphabetical", "random", "hourly" (alphabetical on even hours, reverse alphabetical
+                           on odd hours) and "filesystem". -->
+                        <runOrder>${maven.test.runOrder}</runOrder>
+                        <systemPropertyVariables>
+                            <build.directory>${project.build.directory}</build.directory>
+                        </systemPropertyVariables>
+                        <includes>
+                            <include>**/IntTest*.java</include>
+                        </includes>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -370,6 +421,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
